Fix news card image width scaling on small screens

--- a/docs/css/elements/news-card.css
+++ b/docs/css/elements/news-card.css
@@ -64,7 +64,7 @@
     }
 
     img {
-      max-width: none;
+      max-width: 100%;
       align-self: center;
     }
   }
